# Aetheris

./: .gitignore  .gitmodules  Aetheris.csproj  GDD.txt  Plan.md  Plan.txt  blender-export.py  imgui.ini  meson.build  player.glb  server_log_20251027_092049.txt  settings.cfg  setup.sh  texproc
.cache/clangd/index/: ArchDetect.h.AE4C39AC551D0777.idx  Base64.h.526A5A8605C785E7.idx  BasicGenerators.h.194AA243E7A949BD.idx  Blends.h.2343A40A6D5F9730.idx  Cellular.h.0FA0EEB8CFC2616C.idx  Config.h.1A2BE3F1D8A7815F.idx  DispatchClass.h.2A5751E96095A4ED.idx  DomainWarp.h.9344012CF8E33DC5.idx  DomainWarpFractal.h.76025A5EFD74ECD6.idx  DomainWarpSimplex.h.CF0E4E7FA814210A.idx  Export.h.1050309C5C79FA1D.idx  Export.h.24BF409FCC250FD8.idx  FastNoise.h.2EE5A19FDFD977E9.idx  FastNoise_C.cpp.54D92BCADC44A201.idx  FastNoise_C.h.5CAA49538BA8C6B1.idx  FastSIMD.cpp.B05165CE3BE765B3.idx  FastSIMD_Build.inl.6A98B16D6BEE320C.idx  FeatureEnums.h.00B886313008328C.idx  Fractal.h.5789FF9046486031.idx  Functions.h.C4E5B5ED6A682279.idx  Generator.h.DD1217AC24D9F572.idx  Metadata.cpp.3EB35DFA29A0BEBF.idx  Metadata.h.78C385D4D62BF441.idx  Modifiers.h.76C3044AA9908A55.idx  Perlin.h.A0FA11FBC4E059A1.idx  Register.h.2B910506DB08209D.idx  SSE.h.21C1F7F28B8034AA.idx  Scalar.h.E6E3546DC7C419FF.idx  Simplex.h.695CCDD5BD3A0770.idx  SmartNode.cpp.B8969F8B131A846D.idx  SmartNode.h.287A80A003E5E55B.idx  ToolSet.h.191F1053F5E9C34B.idx  Trig.h.DFA1858F1B5277FD.idx  Value.h.57C07BD1B3C0F1ED.idx  VkBootstrap.cpp.B8E9C4D1447B66C4.idx  VkBootstrap.h.53B3DE6B6DE5E2DF.idx  VkBootstrapDispatch.h.B8FB030779B01FF6.idx  VkBootstrapFeatureChain.h.7754B5C547C22507.idx  VkBootstrapFeatureChain.inl.B33B041CCC950E7E.idx  camera.h.0D6014A3A26EFA6D.idx  (+46 more)
Net/Client/: Client.cs  ClientConfig.cs
Net/Client/Game/: BlockPlace.cs  Extras.cs  Game.cs  GameState.cs  Systems.cs
Net/Client/Game/Inventory/: InventoryRenderer.cs  InventoryUI.cs  Panel.cs  Slot.cs
Net/Client/Game/Player/: BlockBreakingSystem.cs  BlockPlacementSystem.cs  FallDamage.cs  MiningSystem.cs  Player.cs  PrefabMiningSystem.cs  Raycasts.cs  TreeMiningSystem.cs  VoxelPlacer.cs
Net/Client/Game/Rendering/: BlockPlacementPreview.cs  BlockRenderer.cs  CubeRenderer.cs  GLBModelLoader.cs  PlacedBlockManager.cs  PrefabRenderer.cs
Net/Client/Game/UI/: ActualHud.cs  ChatSystem.cs  HUD.cs  HudRenderer.cs  Inventory.cs  InventoryUI.cs  ToolTips.cs  ToopTipSystem.cs
Net/GameLogic/: BlockRegistry.cs  GameWorld.cs  MiningHelper.cs  NetworkHelpers.cs  PlacementHelper.cs  PrefabSystem.cs  TerrainModifier.cs  VoxelGrid.cs
Net/Menus/: FontRenderer.cs  UiHelper.cs
Net/Server/: BlockManager.cs  Server.cs  ServerConfig.cs
Net/Server/Game/: VoxelManager.cs  VoxelServer.cs
Net/Server/WorldGeneration/: Chunk.cs  MarchingCubes.cs  TreeSpawner.cs  WorldGen.cs
Net/Shared/: BlockGrid.cs  BlocktypeConverter.cs  CraftingSystem.cs  CubeBlockMeshGenerator.cs  InventoryData.cs  InventoryManager.cs  ItemSystem.cs  NetworkMessages.cs  PacketIO.cs  PlayerNetworkController.cs  PlayerStats.cs
Projects/: Untitled.blend  Untitled.blend1
blender/playermodel/: halflife_export.glb  playermodel.blend  playermodel.blend1  playermodel.fbx  playermodel.glb  playermodeljointed.blend
client/: meson.build
client/include/: camera.h  chest_system.h  combat_system.h  hud.h  input.h  inventory_ui.h  main_menu.h  mesh_builder.h  player.h  renderer.h  view_model.h  view_model_anim.h  vk_context.h  window.h
client/shaders/: cube.vert  player.frag  player.vert  terrain.frag  terrain.vert  terrain_frag.spv  terrain_vert.spv  vert.spv  viewmodel.frag
client/src/: input.cpp  main.cpp  main_menu.cpp  mesh_builder.cpp  player.cpp  view_model.cpp  vk_init.cpp  window.cpp
server/: meson.build
server/include/: chunk_manager.h  inventory_manager.h  stats_manager.h
server/src/: chunk_manager.cpp  main.cpp
shared/: meson.build
shared/include/: asset_path.h  chunk.h  combat.h  config.h  day_night.h  gltf_loader.h  http_client.h  inv_packets.h  inventory.h  item.h  log.h  marching_cubes.h  mp_packets.h  multiplayer_manager.h  net_common.h  noise_gen.h  packets.h  player_stats.h  remote_players.h  thread_pool.h
shared/src/: gltf_loader.cpp  marching_cubes.cpp  noise_gen.cpp
subprojects/: libenet.wrap
tools/: bot_client.cpp
website/: index.html  package-lock.json  package.json
website/data/: db.json
website/src/: index.js
